--- a/server/public/style.css
+++ b/server/public/style.css
@@ -1,17 +1,56 @@
 body {
-				font-family: Monospace;
-				background-color: #000;
-				color: #fff;
-				margin: 0px;
-				overflow: hidden;
-			}
-			#info {
-				color: #fff;
-				position: absolute;
-				top: 10px;
-				width: 100%;
-				text-align: center;
-				z-index: 100;
-				display:block;
-			}
-			#info a, .button { color: #f00; font-weight: bold; text-decoration: underline; cursor: pointer }
+	font-family: Monospace;
+	background-color: #555;
+	color: #fff;
+	margin: 0px;
+	overflow: hidden;
+}
+.UIwindow
+ {
+	background-color: rgba(255, 0, 0, 0.2);
+	font-size: 2em;
+	border: 3px solid black;
+	overflow: hidden;
+	position:absolute;
+	top: 100px;
+	left: 0px;
+	width: 160px;
+	height: 120px;
+	min-width: 120px;
+	min-height: 90px;
+	max-width: 400px;
+	max-height: 300px;
+	resize: both;	
+}
+.UIwindow .textInput
+ {
+	position: absolute;
+	min-width: 120px;
+	max-width: 400px;
+	bottom: 0px;
+	resize: none;
+	width: 95%;
+ }
+ .UIwindow .textBox
+ {
+	position: absolute;
+	min-width: 120px;
+	min-height: 80px;
+	max-width: 400px;
+	max-height: 290px;
+	height: 90%;
+	top: 0xp;
+	width: 95%;
+	overflow: scroll;
+	resize: none;
+ }
+#info {
+	color: #fff;
+	position: absolute;
+	top: 10px;
+	width: 100%;
+	text-align: center;
+	z-index: 100;
+	display:block;
+}
+#info a, .button { color: #f00; font-weight: bold; text-decoration: underline; cursor: pointer }
