--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -1,6 +1,7 @@
 	<script type="text/javascript" src="/static/js/socket.io.min.js"></script> 
 	<script type="text/javascript" src="/static/js/RequestAnimationFrame.js"></script>
 	<script type="text/javascript" src="/static/js/Three.js"></script>
+	<script type="text/javascript" src="/static/js/ThreeOctree.min.js"></script>
 	<script type="text/javascript" src="/static/js/ThreeUtils.js"></script>
 	<script type="text/javascript" src="/static/js/LOH.js"></script>
 	<script type="text/javascript" src="/static/js/microphysic.js"></script>
